tekton/IngressResource/eventlistenerIngressGit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-el-ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-github-listener #prefix el to the eventlistener name as eventlistener creates a service
                port:
                  number: 8080
