tekton/IngressResource/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  #enable SSL redirect
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tekton.gm-nig-ltd.tech
    secretName: harbor-tls-ingress # the certifcate secret is created and a must for tls enabled ingress
  rules:
  - host: tekton.gm-nig-ltd.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard  
            port:
              number: 9097  # port pointing to the port on the service and not the targetPort
